--- a/04-eks/01-eks-cluster/eksworkshop_15.yaml
+++ b/04-eks/01-eks-cluster/eksworkshop_15.yaml
@@ -3,7 +3,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: eksworkshop-eksctl-upg
+  name: uipl15
   region: ap-south-1
   version: "1.15"
 
@@ -17,13 +17,13 @@ vpc:
     privateAccess: true
 
 managedNodeGroups:
-- name: t3-managed-ng
+- name: uipl15_managed_ng
   instanceType: t3.large
   minSize: 2
   maxSize: 4
   desiredCapacity: 2
-  privateNetworking: true
-  instancePrefix: eks-default
+  privateNetworking: false
+  instancePrefix: uipl15-pub
   instanceName: t3-managed
   labels: {role: worker,type: managed}  
   ssh:
