--- a/04-eks/05-eks-ingress/alb-ingress-controller.yaml
+++ b/04-eks/05-eks-ingress/alb-ingress-controller.yaml
@@ -25,7 +25,7 @@ spec:
           args:
             # Limit the namespace where this ALB Ingress Controller deployment will
             # resolve ingress resources. If left commented, all namespaces are used.
-            # - --watch-namespace=your-k8s-namespace
+            # - --watch-namespace=fargate
 
             # Setting the ingress-class flag below ensures that only ingress resources with the
             # annotation kubernetes.io/ingress.class: "alb" are respected by the controller. You may
@@ -36,16 +36,16 @@ spec:
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name=eksworkshop-eksctl
+            - --cluster-name=eksworkshop-eksctl-upg
 
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
-            - --aws-vpc-id=vpc-xxxxxx
+            - --aws-vpc-id=vpc-04eca777a01211499
 
             # AWS region this ingress controller will operate in.
             # If unspecified, it will be discovered from ec2metadata.
             # List of regions: http://docs.aws.amazon.com/general/latest/gr/rande.html#vpc_region
-            # - --aws-region=us-west-1
+            - --aws-region=ap-south-1
 
             # Enables logging on all outbound requests sent to the AWS API.
             # If logging is desired, set to true.
