--- a/04-eks/05-eks-ingress/eks-fargate-ingress/alb-ingress-controller.yaml
+++ b/04-eks/05-eks-ingress/eks-fargate-ingress/alb-ingress-controller.yaml
@@ -10,7 +10,7 @@ metadata:
   # Namespace the ALB Ingress Controller should run in. Does not impact which
   # namespaces it's able to resolve ingress resource for. For limiting ingress
   # namespace scope, see --watch-namespace.
-  namespace: kube-system
+  namespace: fargate
 spec:
   selector:
     matchLabels:
@@ -36,11 +36,11 @@ spec:
             # Name of your cluster. Used when naming resources created
             # by the ALB Ingress Controller, providing distinction between
             # clusters.
-            - --cluster-name=eksworkshop-eksctl
+            - --cluster-name=eksworkshop-eksctl-upg
 
             # AWS VPC ID this ingress controller will use to create AWS resources.
             # If unspecified, it will be discovered from ec2metadata.
-            # - --aws-vpc-id=vpc-xxxxxx
+            - --aws-vpc-id=vpc-04eca777a01211499
 
             # AWS region this ingress controller will operate in.
             # If unspecified, it will be discovered from ec2metadata.
