Updated MD file

--- a/04-eks/01-eks-cluster/eksworkshop_15.yaml
+++ b/04-eks/01-eks-cluster/eksworkshop_15.yaml
@@ -17,7 +17,7 @@ vpc:
     privateAccess: true
 
 managedNodeGroups:
-- name: uipl15_managed_ng
+- name: uipl15-managed-ng
   instanceType: t3.large
   minSize: 2
   maxSize: 4
