--- a/01-docker-basics/Dockerfile
+++ b/01-docker-basics/Dockerfile
@@ -1,3 +1,3 @@
-FROM nginx:latest
+FROM nginx:1.18.0
 # RUN echo "<h1>Service A</h1>" > /usr/share/nginx/html/index.html
 COPY index.html /usr/share/nginx/html
