--- a/04-eks/06-eks-healthchecks/readiness-pod.yaml
+++ b/04-eks/06-eks-healthchecks/readiness-pod.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: readiness-deployment
+  name: readiness-pod
 spec:
   replicas: 3
   selector:
