--- a/04-eks/02-eks-nodegroups/nodegroups/ng_spot.yaml
+++ b/04-eks/02-eks-nodegroups/nodegroups/ng_spot.yaml
@@ -2,8 +2,8 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: eksworkshop-eksctl-upg
-  region: ap-southeast-1
+  name: uipl17
+  region: ap-south-1
 
 nodeGroups:
   - name: t3-spot-ng
@@ -15,9 +15,8 @@ nodeGroups:
     labels: {role: worker,type: spot} 
     instancesDistribution:
       maxPrice: 0.017
-      instanceTypes: ["t3.small", "t3.medium"] # At least one instance type should be specified
+      instanceTypes: ["t3.small", "t3.medium","t3.large"] # At least one instance type should be specified
       onDemandBaseCapacity: 0
       onDemandPercentageAboveBaseCapacity: 0
-      spotInstancePools: 2
-
+      spotAllocationStrategy: capacity-optimized # launch Spot Instances from the most availably Spot Instance pools
 
