--- a/04-eks/02-eks-nodegroups/nodegroups/ng_unmanaged.yaml
+++ b/04-eks/02-eks-nodegroups/nodegroups/ng_unmanaged.yaml
@@ -2,7 +2,7 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-  name: eksworkshop-eksctl-upg
+  name: uipl17
   region: ap-south-1
 
 nodeGroups:
