--- a/04-eks/08-eks-scaling/cluster-autoscaler-autodiscover.yaml
+++ b/04-eks/08-eks-scaling/cluster-autoscaler-autodiscover.yaml
@@ -1,4 +1,13 @@
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  labels:
+    k8s-addon: cluster-autoscaler.addons.k8s.io
+    k8s-app: cluster-autoscaler
+  name: cluster-autoscaler
+  namespace: kube-system
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
@@ -112,8 +121,6 @@ kind: Deployment
 metadata:
   name: cluster-autoscaler
   namespace: kube-system
-  annotations:
-    cluster-autoscaler.kubernetes.io/safe-to-evict: 'false'
   labels:
     app: cluster-autoscaler
 spec:
@@ -146,11 +153,10 @@ spec:
             - --stderrthreshold=info
             - --cloud-provider=aws
             - --skip-nodes-with-local-storage=false
-            - --expander=least-waste
-            - --node-group-auto-discovery=asg:tag=k8s.io/cluster-autoscaler/enabled,k8s.io/cluster-autoscaler/eksworkshop-eksctl
+            - --nodes=1:10:k8s-worker-asg-1
           volumeMounts:
             - name: ssl-certs
-              mountPath: /etc/ssl/certs/ca-certificates.crt
+              mountPath: /etc/ssl/certs/ca-certificates.crt #/etc/ssl/certs/ca-bundle.crt for Amazon Linux Worker Nodes
               readOnly: true
           imagePullPolicy: "Always"
       volumes:
