--- a/04-eks/05-eks-ingress/ingress.yaml
+++ b/04-eks/05-eks-ingress/ingress.yaml
@@ -7,6 +7,9 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    # Uncomment to Share the Ingress across multiple ingress points
+    # alb.ingress.kubernetes.io/group.name: <my-group>
+    # alb.ingress.kubernetes.io/group.order: <'10'>
     # Uncomment following line for fargate
     # alb.ingress.kubernetes.io/target-type: ip
 spec:
