--- a/04-eks/05-eks-ingress/ingress.yaml
+++ b/04-eks/05-eks-ingress/ingress.yaml
@@ -1,22 +1,22 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: dev-nginx-ingress
+  name: nginx1
   # Uncomment following line for fargate
-  namespace: dev
+  namespace: default
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     # Uncomment to Share the Ingress across multiple ingress points
-    alb.ingress.kubernetes.io/group.name: nginx-def
-    alb.ingress.kubernetes.io/group.order: '20'
+    alb.ingress.kubernetes.io/group.name: nginx
+    alb.ingress.kubernetes.io/group.order: '10'
     # Uncomment following line for fargate
     # alb.ingress.kubernetes.io/target-type: ip
 spec:
   rules:
   - http:
       paths:  
-      - path: /dev
+      - path: /*
         backend:
-          serviceName: nginx
+          serviceName: nginx1
           servicePort: 80
